force-app/main/default/objects/ascend_Note__c/ascend_Note__c.object-meta.xml
<CustomObject>
    <label>Note</label>
    <nameField>
        <displayFormat>NT-{0000000}</displayFormat>
        <label>Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>