force-app/main/default/objects/ascend_Note__c/fields/nd_Comment__c.field-meta.xml
<CustomField>
    <fullName>nd_Comment__c</fullName>
    <label>Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>