force-app/main/default/objects/ascend_Note__c/fields/nd_Decision_Detail__c.field-meta.xml
<CustomField>
    <fullName>nd_Decision_Detail__c</fullName>
    <label>Decision Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>