force-app/main/default/objects/ascend_Note__c/fields/nd_Description__c.field-meta.xml
<CustomField>
    <fullName>nd_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>