force-app/main/default/objects/ascend_Note__c/fields/nd_Donor_Response_Notes__c.field-meta.xml
<CustomField>
    <fullName>nd_Donor_Response_Notes__c</fullName>
    <label>Donor Response Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>