force-app/main/default/objects/ascend_Note__c/fields/nd_External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_External_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>