force-app/main/default/objects/ascend_Note__c/fields/nd_Follow_Up_Needed__c.field-meta.xml
<CustomField>
    <fullName>nd_Follow_Up_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Needed</label>
    <type>Checkbox</type>
</CustomField>