force-app/main/default/objects/ascend_Note__c/fields/nd_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>nd_Note_Type__c</fullName>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
                <label>Advisory Council Note</label>
            </value>
            <value>
                <fullName>PD</fullName>
                <label>Proposal Detail Note</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>Gift Acknowledgement Note</label>
            </value>
            <value>
                <fullName>NP</fullName>
                <label>Proposal Note</label>
            </value>
            <value>
                <fullName>SN</fullName>
                <label>Strategy Notes</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Gift Planning Document</label>
            </value>
            <value>
                <fullName>PG</fullName>
                <label>Pledge Communication</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>Prospect Note</label>
            </value>
            <value>
                <fullName>BI</fullName>
                <label>Biographical Note</label>
            </value>
            <value>
                <fullName>TC</fullName>
                <label>Transformative Gifts Coaching Meeting</label>
            </value>
            <value>
                <fullName>TS</fullName>
                <label>Transformative Gifts Strategy Meeting</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <isActive>false</isActive>
                <label>Alumni Membership Letter</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <isActive>false</isActive>
                <label>Award and Recognition</label>
            </value>
            <value>
                <fullName>BW</fullName>
                <isActive>false</isActive>
                <label>BEAT Weekend Comments</label>
            </value>
            <value>
                <fullName>CI</fullName>
                <isActive>false</isActive>
                <label>Child Information</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <isActive>false</isActive>
                <label>Children&apos;s High School</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <isActive>false</isActive>
                <label>DIS Capture</label>
            </value>
            <value>
                <fullName>DN</fullName>
                <isActive>false</isActive>
                <label>Death Notice/Obituary</label>
            </value>
            <value>
                <fullName>DO</fullName>
                <isActive>false</isActive>
                <label>Development Officer</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <isActive>false</isActive>
                <label>Donor Services Note</label>
            </value>
            <value>
                <fullName>DD</fullName>
                <isActive>false</isActive>
                <label>Driving Directions</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <isActive>false</isActive>
                <label>Employer Information</label>
            </value>
            <value>
                <fullName>AI</fullName>
                <isActive>false</isActive>
                <label>Endowment Image</label>
            </value>
            <value>
                <fullName>ZH</fullName>
                <isActive>false</isActive>
                <label>Engagement/Action to take in FY21</label>
            </value>
            <value>
                <fullName>Engagement/Action to take in FY21</fullName>
                <isActive>false</isActive>
                <label>Engagement/Action to take in FY21</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <isActive>false</isActive>
                <label>Entity Couple Photo</label>
            </value>
            <value>
                <fullName>EP</fullName>
                <isActive>false</isActive>
                <label>Entity Individual Photo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>