force-app/main/default/objects/ascend_Note__c/fields/nd_Note_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Note_Type_Formula__c</fullName>
    <description>Formula field that converts the Note Type API Values to the labels for use in the Note Table.</description>
    <formula>CASE(
nd_Note_Type__c,
&apos;RS&apos;, &apos;Research Note&apos;,
&apos;PM&apos;, &apos;Prospect Comment&apos;,
&apos;PD&apos;, &apos;Proposal Detail Note&apos;,
&apos;GA&apos;, &apos;Gift Acknowledgement Note&apos;,
&apos;NP&apos;, &apos;Proposal Note&apos;,
&apos;SN&apos;, &apos;Strategy Notes&apos;,
&apos;BB&apos;, &apos;Gift Planning Document&apos;,
&apos;BI&apos;, &apos;Biographical Note&apos;,
&apos;2&apos;, &apos;2&apos;,
&apos;3&apos;, &apos;3&apos;,
&apos;AA&apos;, &apos;WARNING&apos;,
&apos;DN&apos;, &apos;Death Notice/Obituary&apos;,
&apos;EC&apos;, &apos;Entity Couple Photo&apos;,
&apos;EP&apos;, &apos;Entity Individual Photo&apos;,
&apos;MN&apos;, &apos;Name Pronunciation&apos;,
&apos;MP&apos;, &apos;Preferences&apos;,
&apos;MS&apos;, &apos;Childrens High School&apos;,
&apos;OT&apos;, &apos;Other Note&apos;,
&apos;R1&apos;, &apos;Research Entity Announcement&apos;,
&apos;R2&apos;, &apos;Research Pre-Qualification&apos;,
&apos;R3&apos;, &apos;Research Biographic Profile&apos;,
&apos;R4&apos;, &apos;Research Capacity Profile&apos;,
&apos;R5&apos;, &apos;Research Comprehensive Profile&apos;,
&apos;R6&apos;, &apos;Research Biographical Profile Report&apos;,
&apos;WS&apos;, &apos;Wealth Screening&apos;,
&apos;WX&apos;, &apos;WealthEx&apos;,
&apos;ZA&apos;, &apos;Philanthropic Areas of Interest&apos;,
&apos;ZC&apos;, &apos;Influencers / Collaborators to involve&apos;,
&apos;ZD&apos;, &apos;Personal Milestones to influence timing&apos;,
&apos;ZE&apos;, &apos;What are the immediate next steps?&apos;,
&apos;ZH&apos;, &apos;Engagement/Action to take in FY21&apos;,
&apos;ST&apos;, &apos;Strategy&apos;,
&apos;AL&apos;, &apos;Alumni Membership Letter&apos;,
&apos;AR&apos;, &apos;Award and Recognition&apos;,
&apos;CI&apos;, &apos;Child Information&apos;,
&apos;DC&apos;, &apos;DIS Capture&apos;,
&apos;DD&apos;, &apos;Driving Directions&apos;,
&apos;DO&apos;, &apos;Development Officer&apos;,
&apos;DS&apos;, &apos;Donor Services Note&apos;,
&apos;EI&apos;, &apos;Event Information Note&apos;,
&apos;EN&apos;, &apos;Entity Photo Not Available&apos;,
&apos;FB&apos;, &apos;Football Note&apos;,
&apos;GB&apos;, &apos;Gift Agreement&apos;,
&apos;GC&apos;, &apos;Goal/PresC/Pledges&apos;,
&apos;GG&apos;, &apos;Goal/Gifts&apos;,
&apos;GL&apos;, &apos;Goal/Pledges&apos;,
&apos;GN&apos;, &apos;General Reference Note&apos;,
&apos;GP&apos;, &apos;Gift Processing Note&apos;,
&apos;GQ&apos;, &apos;Goal/PG&apos;,
&apos;GT&apos;, &apos;Goal/PresC/Gifts&apos;,
&apos;GU&apos;, &apos;Goal: Total Contacts&apos;,
&apos;GV&apos;, &apos;Goal: New Bequest Expectancies Face Value&apos;,
&apos;GW&apos;, &apos;Goal: New Bequest Expectancies Present Value&apos;,
&apos;GX&apos;, &apos;Goal: New Income Producing Gifts Face Value&apos;,
&apos;GY&apos;, &apos;Goal: New Income Producing Gifts Present&apos;,
&apos;IN&apos;, &apos;Idea Note&apos;,
&apos;MA&apos;, &apos;Political Affiliation&apos;,
&apos;MD&apos;, &apos;Family members\&apos; Deaths&apos;,
&apos;ME&apos;, &apos;Employer Information&apos;,
&apos;MF&apos;, &apos;Financial Outlook&apos;,
&apos;ML&apos;, &apos;Mailing Note&apos;,
&apos;MO&apos;, &apos;Obstacles to Overcome&apos;,
&apos;OB&apos;, &apos;O\&apos;Hara Benefits Note&apos;,
&apos;PG&apos;, &apos;Pledge Communication&apos;,
&apos;PC&apos;, &apos;Freshman Parent Card&apos;,
&apos;PF&apos;, &apos;Purpose of Fund&apos;,
&apos;PN&apos;, &apos;Prospect Post It Note&apos;,
&apos;PS&apos;, &apos;Principal Stewardship&apos;,
&apos;SB&apos;, &apos;Sorin Benefits Note&apos;,
&apos;SAN&apos;, &apos;Stewardship Allocation Note&apos;,
&apos;SW&apos;, &apos;Stewardship Note&apos;,
&apos;TY&apos;, &apos;Thank You Note&apos;,
&apos;UA&apos;, &apos;Undergraduate Admissions Note&apos;,
&apos;UD&apos;, &apos;Undergraduate Admissions Declined&apos;,
&apos;UW&apos;, &apos;Undergraduate Admissions Waitlist&apos;,
&apos;ZB&apos;, &apos;What amount is to be solicited and when?&apos;,
&apos;ZF&apos;, &apos;Key Notre Dame Influencers&apos;,
&apos;ZG&apos;, &apos;External Influencers&apos;,
&apos;BW&apos;, &apos;BEAT Weekend Comments&apos;,
&apos;AB&apos;, &apos;Strategy Note (Legacy)&apos;,
&apos;AI&apos;, &apos;Endowment Image&apos;,
&apos;FI&apos;, &apos;FI&apos;,
&apos;TC&apos;, &apos;Transformative Gifts Coaching Meeting&apos;,
&apos;TS&apos;, &apos;Transformative Gifts Strategy Meeting&apos;,
&apos;AC&apos;, &apos;Advisory Council Note&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note Type Formula</label>
    <type>Text</type>
</CustomField>