force-app/main/default/objects/ascend_Note__c/fields/nd_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>nd_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity that this Note is related to.</description>
    <inlineHelpText>The opportunity that this Note is related to.</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.nd_Organization__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.nd_Constituent_ID__c</field>
            <operation>equals</operation>
            <valueField>$Source.nd_Constituent__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>