force-app/main/default/objects/ascend_Note__c/fields/nd_Organization__c.field-meta.xml
<CustomField>
    <fullName>nd_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>