force-app/main/default/objects/ascend_Note__c/fields/nd_PRM__c.field-meta.xml
<CustomField>
    <fullName>nd_PRM__c</fullName>
    <label>PRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>No Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>