force-app/main/default/objects/ascend_Note__c/fields/nd_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Send_Date__c</fullName>
    <label>Send Date</label>
    <type>Date</type>
</CustomField>