force-app/main/default/objects/ascend_Note__c/fields/nd_Send_Decision__c.field-meta.xml
<CustomField>
    <fullName>nd_Send_Decision__c</fullName>
    <label>Send Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>