force-app/main/default/objects/ascend_Note__c/fields/nd_Send_Segment__c.field-meta.xml
<CustomField>
    <fullName>nd_Send_Segment__c</fullName>
    <label>Send Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>