force-app/main/default/objects/ascend_Note__c/fields/nd_Subject__c.field-meta.xml
<CustomField>
    <fullName>nd_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>