force-app/main/default/objects/ascend_Note__c/fields/sfl_load_group_id__c.field-meta.xml
<CustomField>
    <fullName>sfl_load_group_id__c</fullName>
    <description>Used by development&apos;s load process. This field allows multiple records to be grouped in the same data load. This is a manual field set by the person doing the upload. It is used differently from field sfl_load_process_id.</description>
    <inlineHelpText>Used by development&apos;s load process. This field allows multiple records to be grouped in the same data load. This is a manual field set by the person doing the upload. It is used differently from field sfl_load_process_id.</inlineHelpText>
    <label>sfl_load_group_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>