force-app/main/default/objects/ascend_Note__c/recordTypes/Pledge_Communication_Notes.recordType-meta.xml
<RecordType>
    <fullName>Pledge_Communication_Notes</fullName>
    <active>true</active>
    <label>Pledge Communication Notes</label>
</RecordType>