force-app/main/default/objects/ascend_Note__c/recordTypes/Proposal_Notes.recordType-meta.xml
<RecordType>
    <fullName>Proposal_Notes</fullName>
    <active>true</active>
    <label>Proposal Notes</label>
</RecordType>