force-app/main/default/objects/ascend_Note__c/validationRules/Restrict_Prospect_Note_Note_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Prospect_Note_Note_Type</fullName>
    <active>true</active>
    <description>Limit the selection of &quot;Prospect Note&quot; as the Note Type to Prospect Management users only (Research included as part of PM).</description>
    <errorConditionFormula>AND(

ISPICKVAL(nd_Note_Type__c, &quot;PR&quot;),

NOT(OR(

$Profile.Name = &quot;System Administrator&quot;,
$Permission.Create_Prospect_Note_Notes,
$User.ND_Bypass_Duplicate_Rules__c = TRUE)
)

)</errorConditionFormula>
    <errorDisplayField>nd_Note_Type__c</errorDisplayField>
    <errorMessage>Only Prospect Management and Research can select &quot;Prospect Note&quot; as the Note Type. Please make another selection.</errorMessage>
</ValidationRule>